<resources>
    <string name="app_name">Quiz App</string>
    <string name="d1">1. Which artist said: The Medici created and destroyed me? - just the name</string>
    <string name="d2">2. How the painter Giovanni Antonio Bazzi was called?</string>
    <string name="d3">3. Which artist said: Beauty is the purgation of superfluities? - just the name</string>
    <string name="d4">4. Where was located the famous School of philosophers reproduced in the following print?</string>
    <string name="d5">5. Which of these artists worked in the Vatican State?</string>
    <string name="d6">6. Among these, which is Michelangelo Buonarroti?</string>
    <string name="d7">7. Among these, which is Leonardo da Vinci?</string>
    <string name="d8">8. Among these, which is Sodoma?</string>
</resources>
