<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.utente.quizapp.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/domanda_1"
            style="@style/domanda_box_style">

            <TextView
                style="@style/domanda_style"
                android:text="@string/d1" />

            <ImageView
                android:id="@+id/d1_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/leo_big" />

            <EditText
                android:id="@+id/d1_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/domanda_2"
            style="@style/domanda_box_style">

            <TextView
                style="@style/domanda_style"
                android:text="@string/d2" />

            <ImageView
                android:id="@+id/d2_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/sodoma_big" />

            <EditText
                android:id="@+id/d2_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/domanda_3"
            style="@style/domanda_box_style">

            <TextView
                style="@style/domanda_style"
                android:text="@string/d3" />

            <ImageView
                android:id="@+id/d3_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/michel_big" />

            <EditText
                android:id="@+id/d3_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/domanda_4"
            style="@style/domanda_box_style">

            <TextView
                style="@style/domanda_style"
                android:text="@string/d4" />

            <ImageView
                android:id="@+id/d4_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/school_athens" />

            <EditText
                android:id="@+id/d4_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/domanda_5"
            style="@style/domanda_box_style">

            <TextView
                style="@style/domanda_style"
                android:text="@string/d5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/d5_first_checkbox"
                        style="@style/question_checkbox_style"
                        android:text="" />

                    <ImageView
                        android:id="@+id/d5_first_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/michel_quiz" />

                </LinearLayout>

                <LinearLayout style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/d5_second_checkbox"
                        style="@style/question_checkbox_style"
                        android:text="" />

                    <ImageView
                        android:id="@+id/d5_second_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/rafa_quiz" />

                </LinearLayout>

                <LinearLayout style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/d5_third_checkbox"
                        style="@style/question_checkbox_style"
                        android:text="" />

                    <ImageView
                        android:id="@+id/d5_third_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/leo_quiz" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/domanda_6"
            style="@style/domanda_box_style">

            <TextView
                style="@style/domanda_style"
                android:text="@string/d6" />

            <RadioGroup
                android:id="@+id/d6_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/d6_option_one"
                    style="@style/domanda_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/d6_option_two"
                    style="@style/domanda_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/d6_option_three"
                    style="@style/domanda_radio_button_style"
                    android:text="" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/domanda_radio_images_style">

                    <ImageView
                        android:id="@+id/d6_image_one"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/leo" />

                </LinearLayout>

                <LinearLayout style="@style/domanda_radio_images_style">

                    <ImageView
                        android:id="@+id/d6_image_two"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/michel" />

                </LinearLayout>

                <LinearLayout style="@style/domanda_radio_images_style">

                    <ImageView
                        android:id="@+id/d6_image_three"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/sodoma" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/domanda_7"
            style="@style/domanda_box_style">

            <TextView
                style="@style/domanda_style"
                android:text="@string/d7" />

            <RadioGroup
                android:id="@+id/d7_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/d7_option_one"
                    style="@style/domanda_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/d7_option_two"
                    style="@style/domanda_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/d7_option_three"
                    style="@style/domanda_radio_button_style"
                    android:text="" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/domanda_radio_images_style">

                    <ImageView
                        android:id="@+id/d7_image_one"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/leo" />

                </LinearLayout>

                <LinearLayout style="@style/domanda_radio_images_style">

                    <ImageView
                        android:id="@+id/d7_image_two"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/michel" />

                </LinearLayout>

                <LinearLayout style="@style/domanda_radio_images_style">

                    <ImageView
                        android:id="@+id/d7_image_three"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/sodoma" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/domanda_8"
            style="@style/domanda_box_style">

            <TextView
                style="@style/domanda_style"
                android:text="@string/d8" />

            <RadioGroup
                android:id="@+id/d8_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/d8_option_one"
                    style="@style/domanda_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/d8_option_two"
                    style="@style/domanda_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/d8_option_three"
                    style="@style/domanda_radio_button_style"
                    android:text="" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/domanda_radio_images_style">

                    <ImageView
                        android:id="@+id/d8_image_one"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/leo" />

                </LinearLayout>

                <LinearLayout style="@style/domanda_radio_images_style">

                    <ImageView
                        android:id="@+id/d8_image_two"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/michel" />

                </LinearLayout>

                <LinearLayout style="@style/domanda_radio_images_style">

                    <ImageView
                        android:id="@+id/d8_image_three"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/sodoma" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkQuiz"
            android:text="Submit" />
    </LinearLayout>


</ScrollView>